--- a/elementartyElectron/index.html
+++ b/elementartyElectron/index.html
@@ -4,5 +4,7 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <!-- <div id="visualization"></div> -->
+  <script type="text/javacript" src="index.js"></script>
 </body>
 </html>
